# hyperfolio-mobile

./: .gitignore  README.md  build_react.sh  move_react_built.sh
rustWebview/: build.sh  build_debug.sh
rustWebview/android/app/: build.gradle
rustWebview/android/app/src/main/: AndroidManifest.xml
rustWebview/android/app/src/main/assets/app/: asset-manifest.json  index.html  precache-manifest.0f707ebdedbe754abc7ea0503ff4bbd2.js  service-worker.js
rustWebview/android/app/src/main/assets/app-bem-backup/: asset-manifest.json  index.html  precache-manifest.05dbc2e376d4f1f8b15c6b5c1d5b31d4.js  service-worker.js
rustWebview/android/app/src/main/assets/app-bem-backup/static/js/: 2.bf1cb19e.chunk.js  2.bf1cb19e.chunk.js.map  main.8bfc5f44.chunk.js  main.8bfc5f44.chunk.js.map
rustWebview/android/app/src/main/assets/app/static/js/: 2.4075c941.chunk.js  2.4075c941.chunk.js.map  main.acbe9bc0.chunk.js  main.acbe9bc0.chunk.js.map
rustWebview/android/app/src/main/assets/teste/: index.html
rustWebview/android/app/src/main/java/com/example/android/: MainActivity.kt
rustWebview/android/app/src/main/res/xml/: network_security_config.xml
rustWebview/rust/: Cargo.toml
rustWebview/rust/src/: android.rs  lib.rs  server.rs  server_v.rs
rustWebview/rust/src/backups/: kotlin.rs  server (copy).rs  server_BACKUP_EMBEDED_ASSETS.rs
rustWebview/rust/src/controllers/: index.rs
rustWebview/rust/src/html/: index.html
