[package]
name = "rust"
version = "0.1.0"
authors = ["Paulo Jorge PM <paulo.jorge.pm@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
#rust-embed = "5.8.0"
mime_guess = "2.0.3"
actix-cors = "0.5.4"
actix-files = "0.5.0"
serde = "1.0.123"
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.18.0", default-features = false }
android_logger = "0.9"
log = "0.4.11"
ndk = "0.2.1"

[profile.release]
lto = true

[lib]
name = "rust"
crate-type = ["cdylib"]
